--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/http": "4.1.0",
     "@angular/platform-browser": "4.1.0",
     "@angular/platform-browser-dynamic": "4.1.0",
-    "@ionic-native/core": "3.7.0",
-    "@ionic-native/splash-screen": "3.7.0",
-    "@ionic-native/status-bar": "3.7.0",
+    "@ionic-native/core": "^3.7.0",
+    "@ionic-native/splash-screen": "^3.7.0",
+    "@ionic-native/status-bar": "^3.7.0",
     "@ionic/storage": "2.0.1",
+    "angular2-moment": "^1.3.3",
+    "angularfire2": "^4.0.0-rc.0",
+    "cordova-plugin-fcm": "^2.1.1",
+    "firebase": "^3.9.0",
     "ionic-angular": "3.2.0",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
@@ -36,5 +40,10 @@
     "@ionic/cli-plugin-ionic-angular": "1.0.0-rc.2",
     "typescript": "2.2.1"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-fcm": {}
+    }
+  }
 }
